# launcher

./: LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/: byond-notification.css  join-buttons.css  main.ts  serverService.ts  settingsService.ts  styles.css  theme.css  update-notification.css  volume-controls.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: byond.rs  discord.rs  lib.rs  main.rs  process.rs
src/assets/: README.md
src/services/: audioService.ts  byondService.ts  byondUIService.ts  discordRichPresenceService.ts  externalLinkService.ts  serverJoinService.ts  serverService.ts  settingsService.ts  settingsUIService.ts  uiService.ts  updateService.ts  updateUIService.ts
