[package]
name = "goonstation-launcher"
version = "0.1.1"
description = "A server launcher for Goonstation"
authors = ["ZeWaka"]
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "goon_launcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-rich-presence = "0.2.5"

[profile.dev]
debug = 0
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true
